--- a/assets/multisetting.css
+++ b/assets/multisetting.css
@@ -8,6 +8,8 @@
 }
 
 .zm_ms_selbtn.zm_ms_selbtn:not(#_) {
+    align-items: center;
+    justify-content: center;
     height: 100%;
     width: calc(100% - 10px);
 
@@ -15,5 +17,5 @@
     padding: 0px;
 
     border: 2px solid var(--theme);
-    font-size: 1.5em;
+    font-size: 1.5em
 }
